--- a/ae/ae-03-bechdel-dataviz.qmd
+++ b/ae/ae-03-bechdel-dataviz.qmd
@@ -1,8 +1,5 @@
 ---
 title: "AE 03: Bechdel + data visualization"
-categories: 
-  - Application exercise
-draft: true
 ---
 
 In this mini-analysis, we use the data from the FiveThirtyEight story "The Dollar-And-Cents Case Against Hollywood's Exclusion of Women."
@@ -23,8 +20,7 @@ library(tidyverse)
 
 ### Data
 
-The data are stored as a CSV (comma-separated values) file in your repository's `data` folder.
-Let's read it from there and save it as an object called `bechdel`.
+The data are stored as a CSV (comma-separated values) file in your repository's `data` folder. Let's read it from there and save it as an object called `bechdel`.
 
 ```{r}
 #| label: read-data
@@ -38,29 +34,34 @@ We can use the `glimpse()` function to get an overview (or "glimpse") of the dat
 
 ```{r}
 #| label: glimpse
-# add code here
+glimpse(bechdel)
 ```
 
 -   What does each observation (row) in the data set represent?
 
-Each observation represents a \_\_\_.
+Each observation represents a **film**.
 
 -   How many observations (rows) are in the data set?
 
-There are \_\_\_ movies in the dataset.
+There are `{r} nrow(bechdel)` movies in the dataset.
 
 -   How many variables (columns) are in the data set?
 
-There are \_\_\_ columns in the dataset.
+There are `{r} ncol(bechdel)` columns in the dataset.
 
 ### Variables of interest
 
 The variables we'll focus on are the following:
 
--   `roi`: Return on investment, calculated as the ratio of the gross to budget.
+-   `gross_2013`: how much did the movie earn at the box office (in 2013 $);
+-   `budget_2013`: how much did the movie cost to make (in 2013 $); 
+-   `roi`: Return on investment, calculated as the ratio of the gross to budget;
+    - If the movie broke even, roi is **1**;
+    - If the movie made money, roi is **greater than 1**;
+    - If the movie lost money, roi is **between 0 and 1**;
 -   `clean_test`: Bechdel test result:
     -   `ok` = passes test
-    -   `dubious`
+    -   `dubious` (*Chinatown*?)
     -   `men` = women only talk about men
     -   `notalk` = women don't talk to each other
     -   `nowomen` = fewer than two women
@@ -68,7 +69,55 @@ The variables we'll focus on are the following:
 
 We will also use the `year` of release in data prep and `title` of movie to take a deeper look at some outliers.
 
-There are a few other variables in the dataset, but we won't be using them in this analysis.
+## Film finances
+
+**How are budgets distributed?**
+
+Visualize the distribution of film budgets in the dataset:
+
+```{r}
+#| label: budget-histogram
+#| warning: false
+
+ggplot(bechdel, aes(x = budget_2013)) + 
+  geom_histogram() + 
+  labs(x = "2013 USD",
+       title = "Film budgets (1990 - 2013)")
+```
+
+- shape: right skewed;
+- center: the mean budget is about `{r} mean(bechdel$budget_2013)`;
+- spread: the standard deviation is about `{r} sd(bechdel$budget_2013)`;
+- modality: unimodal (one peak);
+
+**How are budget and earnings related?**
+
+Visualize the relationship between a film’s budget and its earnings:
+
+```{r}
+#| label: budget-gross
+#| warning: false
+
+ggplot(bechdel, aes(x = budget_2013, y = gross_2013)) + 
+  geom_point() + 
+  geom_smooth() + 
+  labs(x = "Budget (2013 USD)",
+       y = "Gross (2013 USD)",
+       title = "Film finances (1990 - 2013)")
+```
+
+- direction: positive;
+- shape: linear (the curve seems to be introduced only by the outliers in the upper right);
+- strength: moderate;
+
+**Which films are "outliers" in terms of gross?**
+
+```{r}
+#| label: filter-outliers
+
+bechdel |> 
+  filter(gross_2013 > 3e9)
+```
 
 ## Bechdel test results
 
@@ -90,8 +139,7 @@ ggplot(data = bechdel)
 ggplot(data = bechdel, mapping = aes(x = clean_test))
 ```
 
-As we previously mentioned, we often omit the names of the first two arguments in R functions.
-So you'll often see this written as:
+As we previously mentioned, we often omit the names of the first two arguments in R functions. So you'll often see this written as:
 
 ```{r}
 #| label: plot-simplified-call
@@ -100,10 +148,10 @@ ggplot(bechdel, aes(x = clean_test))
 
 Note that the result is exactly the same.
 
--   The `geom_xx` function specifies the type of plot we want to use to represent the data. In the code below, we use `geom_bar()` which creates a bar plot where the height of each bar shows the number of movies in each category.
+-   The `geom_xx` function specifies the type of plot we want to use to represent the data. In the code below, we use `geom_bar` which allows us to see the frequency of each type of film in our dataset.
 
 ```{r}
-#| label: plot-bar
+#| label: plot-point
 ggplot(bechdel, aes(x = clean_test)) +
   geom_bar()
 ```
@@ -114,13 +162,11 @@ What types of movies are more common, those that pass or do not pass the test?
 
 1.  Render your Quarto document.
 
-2.  Go to the Git pane and check the box next to each file listed, i.e., stage your changes.
-    Commit your staged changes using a simple and informative message.
+2.  Go to the Git pane and check the box next to each file listed, i.e., stage your changes. Commit your staged changes using a simple and informative message.
 
 3.  Click on push (the green arrow) to push your changes to your application exercise repo on GitHub.
 
-4.  Go to your repo on GitHub and confirm that you can see the updated files.
-    Once your updated files are in your repo on GitHub, you're good to go!
+4.  Go to your repo on GitHub and confirm that you can see the updated files. Once your updated files are in your repo on GitHub, you're good to go!
 
 ## Return-on-investment
 
@@ -131,8 +177,15 @@ Let's take a look at return-on-investment (ROI) for movies that do and do not pa
 Create side-by-side box plots of `roi` by `clean_test` where the boxes are colored by `binary`.
 
 ```{r}
-#| label: roi-box
-# add code here
+#| label: roi-zoom
+ggplot(bechdel, aes(x = clean_test, y = roi, color = binary)) +
+  geom_boxplot() +
+  labs(
+    title = "Return on investment vs. Bechdel test result",
+    x = "Detailed Bechdel result",
+    y = "Return-on-investment (gross / budget)",
+    color = "Bechdel\nresult"
+  )
 ```
 
 What are those movies with *very* high returns on investment?
@@ -149,8 +202,16 @@ bechdel |>
 Expand on your plot from the previous step to zoom in on movies with `roi < ___` to get a better view of how the medians across the categories compare.
 
 ```{r}
-#| label: roi-box-zoom
-# add code here
+#| label: roi-test-zoom
+ggplot(bechdel, aes(x = clean_test, y = roi, color = binary)) +
+  geom_boxplot() +
+  labs(
+    title = "Return on investment vs. Bechdel test result",
+    x = "Detailed Bechdel result",
+    y = "Return-on-investment (gross / budget)",
+    color = "Bechdel\nresult"
+  ) +
+  coord_cartesian(ylim = c(0, 16))
 ```
 
 What does this plot say about return-on-investment on movies that pass the Bechdel test?
@@ -159,10 +220,10 @@ What does this plot say about return-on-investment on movies that pass the Bechd
 
 1.  Render your Quarto document.
 
-2.  Go to the Git pane and check the box next to each file listed, i.e., stage your changes.
-    Commit your staged changes using a simple and informative message.
+2.  Go to the Git pane and check the box next to each file listed, i.e., stage your changes. Commit your staged changes using a simple and informative message.
 
 3.  Click on push (the green arrow) to push your changes to your application exercise repo on GitHub.
 
-4.  Go to your repo on GitHub and confirm that you can see the updated files.
-    Once your updated files are in your repo on GitHub, you're good to go!
+4.  Go to your repo on GitHub and confirm that you can see the updated files. Once your updated files are in your repo on GitHub, you're good to go!
+
+
