--- a/hw/hw-1.qmd
+++ b/hw/hw-1.qmd
@@ -3,7 +3,7 @@ title: HW 1
 subtitle: Exploring Midwest and NC Counties
 description: "Due: Wed, Jan 28, 11:59 pm"
 categories: HW
-draft: true
+draft: false
 ---
 
 # Introduction
