add lab helpers

--- a/syllabus/syllabus-overview.qmd
+++ b/syllabus/syllabus-overview.qmd
@@ -22,7 +22,8 @@ By the end of the semester, you will…
 +=========+================================+============================+===========+
 | Lecture | Bryan Center Griffith Theater  | MoWe 11:45 AM - 01:00 PM   | John Z\   |
 |         |                                |                            | Sarah  \  |
-|         |                                |                            | TBD       |
+|         |                                |                            | Hyunjin\  |
+|         |                                |                            | Katie     |
 +---------+--------------------------------+----------------------------+-----------+
 | Lab 01  | Perkins LINK 087 (Classroom 3) | Th 08:30 AM - 09:45 AM     | Abuzar\   |
 |         |                                |                            | Chelsea   |
